Fix incorrect bounding box position for '\n'

absoluteQuadsForRange function generates unrealted empty quads
with even not overlapping InlineTextBox.
This fix considers inclusive InlineTextbox, overlapping InlineTextbox,
and exclusive InlineTextbox cases separately.
Considering exclusive InlineTextbox is still required because non
rendering characters(e.g. whitespace) are missing and to cover if range
offset is only in this area.

BUG=698038

Review-Url: https://codereview.chromium.org/2763013002
Cr-Commit-Position: refs/heads/master@{#460310}

Former-commit-id: 19d5f8b3d7cd8ba33ba3f2dd331c339384b299dd